# edu_ai_team-sesac

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py
.streamlit/: config.toml
agents/: __init__.py  base.py  builder_qa.py  builder_qa_agent.py  growth_mapping.py  growth_mapping_agent.py  pipeline.py  planner.py  product_planner_agent.py  quest_designer.py  quest_designer_agent.py  question_power.py  question_power_designer_agent.py
clients/: __init__.py  env.py  llm.py
docs/: AI_기획팀_소개.md  content_interaction_generalization.md  flow.md  implementation_decisions.md  project_context.md  project_structure.md  기획서_원안.md
examples/: README.md  builder_qa_output.sample.json  growth_mapping_output.sample.json  product_planner_output.sample.json  quest_designer_output.sample.json  question_power_designer_output.sample.json  team_run_input.json
inputs/: question_coach.json  quiz_service_spec.md
loaders/: __init__.py  planning_package_loader.py
mvp/: README.md  config.example.js  package.json  server.js
orchestrator/: __init__.py  app_source.py  pipeline.py
outputs/: README.md
prompts/: README.md  builder_qa.md  growth_mapping.md  product_planner.md  quest_designer.md  question_power_designer.md
schemas/: README.md  __init__.py  builder_qa.py  builder_qa_output.schema.json  common.py  growth_mapping.py  growth_mapping_output.schema.json  pipeline_input.schema.json  product_planner.py  product_planner_output.schema.json  quest_designer.py  quest_designer_output.schema.json  question_power_designer.py  (+1 more)
(+105 files in other folders)
