[project]
name = "edu-harness"
version = "0.1.0"
description = "교육 서비스 기획 문서 자동 생성 멀티에이전트 하네스"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
